--- a/index.html
+++ b/index.html
@@ -11,14 +11,22 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
     rel="stylesheet">
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css"
+    integrity="sha512-dPXYcDub/aeb08c63jRq/k6GaKccl256JQy/AnOq7CAnEZ9FzSL9wSbcZkMp4R26vBsMLFYH4kQ67/bbV8XaCQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC:ital,wght@0,100;0,300;0,400;0,500;0,700;0,800;0,900;1,100;1,300;1,400;1,500;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
 </head>
 
-<body class="relative overflow-hidden w-screen">
-  <div class="w-64 h-48 rounded-full glowing mt-44 md:ml-64 blur-[120px]">
-  </div>
-  <div class="w-32 h-28 rounded-full glowing mt-72 ml-auto blur-[120px]">
-  </div>
-  <div id="root" class="absolute w-screen -top-44"></div>
+<body class="relative">
+  <div id="root" class="text-white"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
 
